# delorme-os

./: .dockerignore  .flake8  .gitignore  .pylintrc  .vercelignore  BOT_PROTECTION_FEATURE.md  BUG_FIXES_APPLIED.md  BUG_FIXES_SUMMARY.md  CLAUDE.md  CLEANUP_PLAN.md  CLIENT_ENGINE_AUDIT.md  CLIENT_ENGINE_REDESIGN.md  CRAWLER_ENHANCEMENTS_COMPLETE.md  CRAWLER_QA_COMPLETE.md  DATABASE_COMPARISON.md  DATA_POINTS_REFERENCE.json  DATA_POINTS_REFERENCE.md  DEEP_RESEARCHER_INTEGRATION_PLAN.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SETUP_SUMMARY.md  DEPLOY_STAGING_NOW.md  Dockerfile  ENGINE_UI_OVERHAUL_SUMMARY.md  EXTRACTION_ENGINE_INTEGRATION.md  EXTRACTION_RESULTS.md  EXTRACTION_RESULTS_FINAL.md  FRONTEND_HOSTING.md  FRONTEND_REDESIGN.md  HEADING_STRUCTURE_FEATURE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_VERIFICATION.md  LICENSE.txt  MANUAL_TEST_SITEMAP_VALIDATION.md  NETWORK_FIX.md  PHASE_3_COMPLETE_SUMMARY.md  PHASE_3_IMPLEMENTATION_STATUS.md  PHASE_3_INTEGRATION_GUIDE.md  PHASE_4_COMPLETE.md  PHASE_4_FRONTEND_COMPLETE.md  (+110 more)
.claude/: settings.json  settings.local.json
.claude/Coding Sessions/: 2025-11-10_17-16-47_render-deployment-fix.md  2025-11-11_1550_sitemap_parser_manual_import_fix.md  2025-11-11_19-30-00_extraction-engine-integration.md  2025-11-13_enhanced-data-table-screenshot-modal.md
.claude/commands/: add-payment-feature.md  create-migration.md  deep-researcher.md  fix-lint.md  new-api-endpoint.md  new-component.md  run-tests.md  website-engine-phase-2.md
.cursor/rules/: 000-core-project.mdc  100-api-workflow.mdc  200-frontend-components.mdc  210-frontend-hooks-state.mdc  220-frontend-performance.mdc  300-backend-clean-architecture.mdc  310-backend-database.mdc  400-backend-errors.mdc  410-frontend-errors.mdc  500-environment-config.mdc  600-payments-stripe.mdc  605-payments-rbac.mdc  610-plans-rbac-system.mdc  700-deployment-guide.mdc  720-railway-deployment.mdc  730-digital-ocean-deployment.mdc  810-github-actions-cicd.mdc  999-development-best-practices.mdc
app/: admin.py  auth_backend.py  db.py  models.py  permissions.py
app/commands/: create_superuser.py  seed_data_points.py  seed_heading_structure_datapoint.py  seed_phase1_data_points.py  setup_stripe_products.py  setup_tommy_superuser.py
app/config/: __init__.py  base.py  payments.py
app/controllers/: analytics.py  article.py  auth.py  client_pages.py  clients.py  crawling.py  engine_setup.py  integrations.py  page_crawl.py  pages.py  payments.py  plans.py  project_leads.py  projects.py  research.py  setup.py  tags.py  upgrades.py
app/core/: access_control.py  exceptions.py
app/schemas/: auth.py  client.py  client_page.py  crawling.py  engine_setup.py  page.py  project.py  project_lead.py  research.py
app/tasks/: __init__.py  (+3 more)
deep-researcher/: .command
docs/: CRAWLER_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  README.md  RECENT_CHANGES.md  ROBUST_CRAWLER_GUIDE.md  SCREENSHOT_CLIENT_ORGANIZATION.md  SCREENSHOT_STORAGE.md  SCREENSHOT_UPDATE_SUMMARY.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.prod.json  vite.config.ts
migrations/: env.py
postgres/: .env.postgres
scripts/: setup_payments.py  test_payment_setup.py
taskfiles/: backend.yml  database.yml  deployment.yml  frontend.yml  payments.yml  ui.yml
tests/: __init__.py  conftest.py
(+307 files in other folders)
